<?xml version="1.0" encoding="utf-8"?>
<com.adayo.app.systemui.windows.views.PullUpDumperLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="1920px"
    android:layout_height="1952px"
    android:background="@color/transparent">

    <RelativeLayout
        android:layout_width="1920px"
        android:layout_height="976px"
        android:layout_marginTop="976px"
        android:background="@drawable/bg_cover">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/img_light"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="72px"
            android:layout_centerHorizontal="true"
            android:gravity="center_vertical"
            android:background="@drawable/img_background_box"
            android:paddingRight="5px"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/title_front"
                android:layout_width="166px"
                android:layout_height="62px"
                android:layout_marginLeft="5px"
                android:gravity="center"
                android:text="@string/hvac_front"
                android:textSize="30px"
                android:textColor="@color/selector_hvac_text"
                android:background="@drawable/selector_hvac_title_front_bg"/>
            <ImageView
                android:layout_width="3px"
                android:layout_height="62px"
                android:background="@drawable/img_dividing_line"/>
            <TextView
                android:id="@+id/title_rear"
                android:layout_width="166px"
                android:layout_height="62px"
                android:gravity="center"
                android:text="@string/hvac_rear"
                android:textSize="30px"
                android:textColor="@color/selector_hvac_text"/>
            <ImageView
                android:id="@+id/dividing_line_three"
                android:layout_width="3px"
                android:layout_height="62px"
                android:visibility="gone"
                android:background="@drawable/img_dividing_line"/>
            <TextView
                android:id="@+id/title_three"
                android:layout_width="166px"
                android:layout_height="62px"
                android:gravity="center"
                android:text="@string/hvac_seat"
                android:textSize="30px"
                android:visibility="gone"
                android:textColor="@color/selector_hvac_text"/>
            <ImageView
                android:id="@+id/dividing_line_four"
                android:layout_width="3px"
                android:layout_height="62px"
                android:visibility="gone"
                android:background="@drawable/img_dividing_line"/>
            <TextView
                android:id="@+id/title_four"
                android:layout_width="166px"
                android:layout_height="62px"
                android:gravity="center"
                android:text="@string/hvac_seat_massage"
                android:textSize="30px"
                android:textColor="@color/selector_hvac_text"
                android:visibility="gone"/>
        </LinearLayout>

        <com.adayo.app.systemui.windows.views.HvacViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="72px"
            android:layout_marginBottom="116px"/>
    </RelativeLayout>
</com.adayo.app.systemui.windows.views.PullUpDumperLayout>